# obs-studio

UI/: obs-app.cpp  volume-control.cpp  volume-control.hpp  window-basic-main.cpp  window-basic-main.hpp
UI/data/themes/: Dark.qss
UI/forms/: OBSBasic.ui
cmake/Modules/: CopyMSVCBins.cmake
libobs/: obs-audio-controls.c  obs-audio-controls.h  obs-audio.c  obs-internal.h  obs-scene.c  obs-source-transition.c  obs-source.c  obs.c  obs.h
plugins/: CMakeLists.txt
plugins/image-source/: obs-slideshow.c
plugins/mac-capture/: mac-audio.c
plugins/obs-filters/: CMakeLists.txt  expander-filter.c  obs-filters.c
plugins/obs-filters/data/locale/: en-US.ini
plugins/obs-transitions/: transition-stinger.c
plugins/win-asio/: CMakeLists.txt  asio-input.cpp  circle-buffer.h
plugins/win-asio/gui/: asioselector.cpp  asioselector.h
